tests/parser/errors/binop_chain.ray
1 < 3 > 5
// To synchronize
print 1
1..2..3
